Add vault unseal

--- a/inventories/all-in-one/group_vars/appservers.yml
+++ b/inventories/all-in-one/group_vars/appservers.yml
@@ -5,8 +5,6 @@ vault_backend: mysql
 vault_server: "{{ sweagle_vault_server }}"
 vault_port: "{{ sweagle_vault_port }}"
 vault_copy_keys: true
+vault_auto_unseal: true
 vault_token: "{{ sweagle_vault_token }}"
-
-os_environment:
-  - key: VAULT_ADDR
-    value : "http://{{ sweagle_vault_server }}:{{ sweagle_vault_port }}"
+vault_install_dir: "/opt/vault"
