--- a/roles/sweagle/tasks/main.yml
+++ b/roles/sweagle/tasks/main.yml
@@ -1,5 +1,23 @@
 ---
 
+# DEBUG TASKS
+
+#- name: Print some debug information
+#  vars:
+#    msg: |
+#        force_local_installation: {{ force_local_installation }}
+#        es_use_repository: {{ es_use_repository }}
+#        es_custom_package_url: {{ es_custom_package_url }}
+#  debug:
+#    msg: "{{ msg.split('\n') }}"
+#  tags: debug_info
+
+- name: Display all variables/facts known for a host
+  debug:
+    var: hostvars[inventory_hostname]
+    verbosity: 3
+  tags: always
+
 - name: Unzip package "full_{{ sweagle_version }}.zip"
   unarchive:
     src: "full_{{ sweagle_version}}.zip"
