--- a/inventories/all-in-one/group_vars/indexservers.yml
+++ b/inventories/all-in-one/group_vars/indexservers.yml
@@ -9,3 +9,7 @@ es_config:
   http.port: 9200
   transport.port: "{{ sweagle_elasticsearch_transport_port }}"
 es_api_port: 9200
+# Don't use repository installation if forced to local installation
+#es_use_repository: "{{ 'false' if (force_local_installation) else 'true' }}"
+es_use_repository: "{{ not force_local_installation }}"
+es_custom_package_url: "{% if force_local_installation %}{{ local_package_folder }}/elasticsearch/elasticsearch-6.6.1.{{ 'deb' if (ansible_os_family == 'Debian') else 'rpm' }}{% endif %}"
