Add support for local installation for elaticsearch

--- a/all-install.yml
+++ b/all-install.yml
@@ -49,6 +49,7 @@
 
 - hosts: indexservers
   roles:
+    - jdk
     - elasticsearch
 ## Test elasticsearch is installed
 # curl -X GET http://elasticsearch-host:9200
