--- a/inventories/all-in-one/group_vars/all.yml
+++ b/inventories/all-in-one/group_vars/all.yml
@@ -5,8 +5,7 @@ ansible_ssh_pass: sweagle
 ansible_become_pass: sweagle
 
 # Variable to force local installation
-force_local_installation: false
-local_package_folder: "/root/sweagle-ansible/files"
+force_local_installation: true
 
 # Variable to set if RHEL SELinux is enabled
 # check if we cannot detect this automatically from a system variable ?
