--- a/roles/elasticsearch/tasks/elasticsearch-RedHat.yml
+++ b/roles/elasticsearch/tasks/elasticsearch-RedHat.yml
@@ -61,7 +61,11 @@
 
 - name: RedHat - Install Elasticsearch from url
   become: yes
-  yum: name={% if es_custom_package_url is defined %}{{ es_custom_package_url }}{% else %}{{ es_package_url }}-{{ es_version }}.noarch.rpm{% endif %} state=present
+  yum:
+    name: "{{ item }}"
+    state: present
+  with_fileglob:
+    - "{% if es_custom_package_url is defined %}{{ es_custom_package_url }}{% else %}{{ es_package_url }}-{{ es_version }}.noarch.rpm{% endif %}"
   when: not es_use_repository
   register: elasticsearch_install_from_package
   notify: restart elasticsearch
