--- a/roles/vault/tasks/main.yml
+++ b/roles/vault/tasks/main.yml
@@ -1,9 +1,20 @@
 ---
-- name: Install unzip
+- name: Install unzip from repo
   package:
     name: unzip
     update_cache: yes
   become: true
+  when: not force_local_installation
+  tags: vault
+
+- name: Install unzip from local
+  package:
+    name: "{{ item }}"
+    update_cache: yes
+  become: true
+  with_fileglob:
+    - "../../../files/*unzip*.{{ 'deb' if (ansible_os_family == 'Debian') else 'rpm' }}"
+  when: force_local_installation
   tags: vault
 
 - name: Create vault target directories
@@ -14,12 +25,24 @@
   become: true
   tags: vault
 
-- name: Download and install vault binary
+- name: Download and install vault binary from URL
   unarchive:
     src: "https://releases.hashicorp.com/vault/{{ vault_version }}/vault_{{ vault_version }}_linux_amd64.zip"
     dest: "{{ vault_install_dir }}"
     remote_src: True
   become: true
+  when: not force_local_installation
+  tags: vault
+
+- name: Download and install vault binary from LOCAL
+  unarchive:
+    src: "{{ item }}"
+    dest: "{{ vault_install_dir }}"
+    remote_src: True
+  become: true
+  with_fileglob:
+    - "../../../files/vault/*vault_{{ vault_version }}*.zip"
+  when: force_local_installation
   tags: vault
 
 - name: Populate /etc/environment with VAULT variables
@@ -51,7 +74,7 @@
   shell: ". /root/.bashrc"
   become: true
   tags: vault
-  
+
 - name: Copy vault config to server
   template:
     src: vaultconfig.hcl.j2
