Add support for local installation for nginx

--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -1,11 +1,23 @@
 ---
 # Install NGINX
-- name: Install nginx
+- name: Install nginx from repo
   package:
     name: nginx
     state: present
   become: true
   become_user: root
+  when: not force_local_installation
+  tags: nginx
+
+- name: Install nginx from local
+  package:
+    name: "{{ item }}"
+    state: present
+  become: true
+  become_user: root
+  with_fileglob:
+    - "../../../files/nginx/*nginx*.{{ 'deb' if (ansible_os_family == 'Debian') else 'rpm' }}"
+  when: force_local_installation
   tags: nginx
 
 - name: Touch access.log file
