--- a/roles/sweagle/tasks/main.yml
+++ b/roles/sweagle/tasks/main.yml
@@ -1,22 +1,21 @@
 ---
+- name: Install unzip from repo
+  package:
+    name: unzip
+    update_cache: yes
+  become: true
+  when: not force_local_installation
+  tags: [ sweagle, sweagle-core, sweagle-web, sweagle-data ]
 
-# DEBUG TASKS
-
-#- name: Print some debug information
-#  vars:
-#    msg: |
-#        force_local_installation: {{ force_local_installation }}
-#        es_use_repository: {{ es_use_repository }}
-#        es_custom_package_url: {{ es_custom_package_url }}
-#  debug:
-#    msg: "{{ msg.split('\n') }}"
-#  tags: debug_info
-
-- name: Display all variables/facts known for a host
-  debug:
-    var: hostvars[inventory_hostname]
-    verbosity: 3
-  tags: always
+- name: Install unzip from local
+  package:
+    name: "{{ item }}"
+    update_cache: yes
+  become: true
+  with_fileglob:
+    - "../../../files/*unzip*.{{ 'deb' if (ansible_os_family == 'Debian') else 'rpm' }}"
+  when: force_local_installation
+  tags: [ sweagle, sweagle-core, sweagle-web, sweagle-data ]
 
 - name: Unzip package "full_{{ sweagle_version }}.zip"
   unarchive:
