--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -27,11 +27,18 @@
   become: true
   tags: nginx
 
+- name: Configure web site
+  template:
+    src: "nginx.conf.j2"
+    dest: "/etc/nginx/conf.d/default.conf"
+  become: true
+  tags: nginx
+
 - name: Check nginx service is running
   service:
     name: nginx
     enabled: yes
-    state: started
+    state: restarted
   become: true
   become_user: root
   tags: nginx
