--- a/inventories/all-in-one/group_vars/appservers.yml
+++ b/inventories/all-in-one/group_vars/appservers.yml
@@ -2,9 +2,10 @@
 vault_version: "0.7.2"
 # WARNING: SWEAGLE not compatible with latest vault 1.1.2
 vault_backend: mysql
-vault_server: "{{ sweagle_vault_server }}"
 vault_port: "{{ sweagle_vault_port }}"
+# vault_copy_key: if true, will copy tokens obtained after init to a txt file in vault conf dir
 vault_copy_keys: true
-vault_auto_unseal: true
+# vault_auto_unseal: if true, will create a script to unseal vault in vault install dir
+#                   and a service that will auto unseal vault when starting
 vault_token: "{{ sweagle_vault_token }}"
 vault_install_dir: "/opt/vault"
