--- a/all-install.yml
+++ b/all-install.yml
@@ -9,6 +9,9 @@
 ## For silent install, copy your SWEAGLE license in parameter sweagle_license_key to /inventories/all-in-one/group_vars
 ## If you don't put your license there, then playbook will ask for it when installing SWEAGLE component.
 
+## Test connection to targeted hosts with
+# ansible all -i ./inventories/test/hosts.yml -m ping
+
 ## Test with
 # ansible-playbook all-install.yml -i ./inventories/all-in-one/hosts.yml --check
 
@@ -56,6 +59,7 @@
 
 ## Nginx must be installed before SWEAGLE
 ## So that web package could be unpack directly to nginx after
+
 - hosts: webservers
   roles:
     - nginx
