--- a/install_webservers.yml
+++ b/install_webservers.yml
@@ -1,4 +1,10 @@
 ---
+## To run it:
+# ansible-playbook install_webservers.yml -i ./inventories/test/hosts.yml
+
 - hosts: webservers
   roles:
     - nginx
+## test with:
+# curl http://127.0.0.1
+## => you should the nginx default page
