--- a/roles/sweagle/tasks/main.yml
+++ b/roles/sweagle/tasks/main.yml
@@ -17,18 +17,24 @@
   when: force_local_installation
   tags: [ sweagle, sweagle-core, sweagle-web, sweagle-data ]
 
+- name: "Check if SWEAGLE package is in {{ playbook_dir }}/files/sweagle"
+  stat:
+    path: "{{ playbook_dir }}/files/sweagle/full_{{ sweagle_version}}.zip"
+  register: sweagleFile
+  tags: [ sweagle, sweagle-core, sweagle-web ]
+
 - name: Unzip package "full_{{ sweagle_version }}.zip from local
   unarchive:
     src: "../../../files/sweagle/full_{{ sweagle_version}}.zip"
     dest: /tmp
-  when: force_local_installation
-  tags: [ sweagle, sweagle-core, sweagle-web, sweagle-data ]
+  when: sweagleFile.stat.exists
+  tags: [ sweagle, sweagle-core, sweagle-web ]
 
 - name: Unzip package "full_{{ sweagle_version }}.zip"
   unarchive:
     src: "full_{{ sweagle_version}}.zip"
     dest: /tmp
-  when: not force_local_installation
+  when: not sweagleFile.stat.exists
   tags: [ sweagle, sweagle-core, sweagle-web ]
 
 - name: Configure SWEAGLE web site
