--- a/roles/jdk/tasks/main.yml
+++ b/roles/jdk/tasks/main.yml
@@ -1,13 +1,20 @@
 ---
 # Install JDK
-- name: Install jdk 1.8 from local packages
+- name: Install jdk 1.8 for Debian from local packages
+  apt:
+    deb: "{{ item }}"
+  become: true
+  with_items: "{{ lookup('fileglob', '../../../files/jdk/*_amd64.deb').split(',') | sort }}"
+  when: force_local_installation and ansible_os_family == 'Debian'
+  tags: jdk
+
+- name: Install jdk 1.8 for Red Hat from local packages
   package:
     name: "{{ item }}"
     state: present
   become: true
-  with_items: "{% if ansible_os_family == 'Debian' %}{{ lookup('fileglob', '../../../files/jdk/*.deb').split(',') | sort }}
-    {% else %}{{ lookup('fileglob', '../../../files/jdk/*.rpm').split(',') | sort }}{% endif %}"
-  when: force_local_installation
+  with_items: "{{ lookup('fileglob', '../../../files/jdk/*.rpm').split(',') | sort }}"
+  when: force_local_installation and ansible_os_family == 'RedHat'
   tags: jdk
 
 - name: Install jdk 1.8 for Debian family
