--- a/inventories/multi-hosts/hosts.yml
+++ b/inventories/multi-hosts/hosts.yml
@@ -3,44 +3,37 @@ all:
   children:
     installserver:
       hosts:
+        # Put only one host here this is the one used for tenant load script
         localhost:
-          connection: local
+          ansible_connection: local
           #ansible_user: sweagle
           #ansible_password: sweagle
           #ansible_become_pass: root
 
     webservers:
       hosts:
-        192.168.1.49:
-          connection: ssh
-          ansible_user: sweagle
-          ansible_password: sweagle
-          ansible_ssh_port: 22
-          ansible_become_pass: sweagle
+        192.168.1.50:
+          ansible_user: root
+          ansible_password: root
+          ansible_become_pass: root
 
     appservers:
       hosts:
-        192.168.1.49:
-          connection: ssh
-          ansible_user: sweagle
-          ansible_password: sweagle
-          ansible_ssh_port: 22
-          ansible_become_pass: sweagle
+        192.168.1.50:
+          ansible_user: root
+          ansible_password: root
+          ansible_become_pass: root
 
     indexservers:
       hosts:
-        192.168.1.50:
-          connection: ssh
-          ansible_user: root
-          ansible_password: root
-          ansible_ssh_port: 22
-          ansible_become_pass: root
+        192.168.1.56:
+          ansible_user: sweagle
+          ansible_password: sweagle
+          ansible_become_pass: sweagle
 
     dbservers:
       hosts:
-        192.168.1.50:
-          connection: ssh
-          ansible_user: root
-          ansible_password: root
-          ansible_ssh_port: 22
-          ansible_become_pass: root
+        192.168.1.56:
+          ansible_user: sweagle
+          ansible_password: sweagle
+          ansible_become_pass: sweagle
